Fix a few issues with dark mode introduction.

--- a/src/eru.WebApp/wwwroot/css/common.css
+++ b/src/eru.WebApp/wwwroot/css/common.css
@@ -10,4 +10,5 @@ body {
 
 #wrapper {
     flex: 1;
+    margin: 10px;
 }
